--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,5 +2,14 @@
 dependencies: []
 
 galaxy_info:
-  role_name: jetbrains-dev-tools
+  role_name: jetbrains_dev_tools
   description: Intellij IDEA and PyCharm for linux.
+  author: skaary
+  license: "license (BSD, MIT)"
+  min_ansible_version: "2.4"
+  platforms:
+    - name: Ubuntu
+      versions:
+        - xenial
+        - bionic
+        - focal
